# goalpost

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  social-analytics-platform-spec.md
collector/: Dockerfile  pyproject.toml
collector/alembic/: env.py
collector/alembic/versions/: 001_initial_schema.py  002_add_media_url_and_hashtags.py
collector/src/: auth.py  config.py  database.py  hashtags.py  logging.py  main.py  models.py  postiz_bridge.py  schemas.py
collector/src/providers/: __init__.py  base.py  facebook.py  instagram.py  linkedin.py  twitter.py  youtube.py
collector/src/routers/: analytics.py  sync.py
docs/: dashboard-design.md
init-db/: 01-extensions.sql
nginx/: default.conf
scripts/: linkedin_oauth.py  meta_oauth.py
